<resources>
    <string name="app_name">HKUST JobGuide</string>
    <string name="title_chats">Chats</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Home</string>
    <string name="title_forum">Forum</string>
    <string name="title_users">Users</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="user_image">User image</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="display_name">Display name</string>
    <string name="display_first_name">First name</string>
    <string name="display_last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="request_sent">Request sent</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="change_image">Change Image</string>
    <string name="logout">Logout</string>
    <string name="change_status">Change Status</string>
    <string name="change_setting">Change Setting</string>
    <string name="create_account">Create account</string>
    <string name="new_friend_request">New friend request</string>
    <string name="login">login</string>
    <string name="welcome_to_quick_chat">Welcome to HKUST JobGuide</string>
    <string name="login_or_create_an_account_to_get_started">Login or create an account to get started</string>
    <string name="chat_icon">Chat icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_events_fragment">Hello events fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_forum_fragment">Hello forum fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="none">none</string>
    <string name="edit">edit</string>
    <string name="enter">Add a profile picture</string>
    <string name="major">Please choose your Major:</string>
    <string name="career_direction">Please select your Career Direction(s): </string>
    <string name="description">Tell more about yourself</string>
    <string name="title_Post">Post</string>
    <string name="add_a_post">Add a post</string>
</resources>